# woodcock

./: .gitignore  .pylintrc  README.md  README.rst  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/unit/graph/: graph.py  test_duckdb.py  test_postgresdb.py  test_sqlitedb.py
tests/unit/graph/resources/: meowth.csv
tests/unit/io/: test_corpus.py  test_csv.py
tests/unit/io/resources/: hitmonchan.tsv.bz2  hitmonchan.tsv.xz  meowth_with_header.csv  raichu.tsv
woodcock/corpus/: typing.py
woodcock/graph/: duckdb.py  graph.py  postgresdb.py  sqldb.py  sqlitedb.py  typing.py
woodcock/io/: corpus.py  csv.py  typing.py  utils.py
