[tool.poetry]
name = "woodcock"
version = "0.1.0"
description = "A scalable implementation of RDF2Vec"
authors = ["Kevin Haller <contact@kevinhaller.dev>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pylint = "^2.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
