[tool.poetry]
name = "woodcock"
version = "0.1.0"
description = "A scalable implementation for generating corpora from KGs"
authors = ["Kevin Haller <contact@kevinhaller.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
psycopg = "^3.1"
python = "^3.8"
lz4 = "^4.3" 

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0"
pylint = "^2.0"
pytest = "^7.0"
pytest-mock = "*"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3
indent-size = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
